<resources>
    <string name="app_name">Emotions controller</string>

    <string name="tabs_emotion">Emotion</string>
    <string name="tabs_history">History</string>
    <string name="tabs_statistics">Statistics</string>
    <string name="tabs_settings">Settings</string>

    <string name="sub_tabs_details">Details</string>
    <string name="sub_tabs_info">Info</string>

    <string name="ecstasy">Ecstasy</string>
    <string name="vigilance">Vigilance</string>
    <string name="rage">Rage</string>
    <string name="loathing">Loathing</string>
    <string name="grief">Grief</string>
    <string name="amazement">Amazement</string>
    <string name="terror">Terror</string>
    <string name="admiration">Admiration</string>

    <string name="emotion">Emotion:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="additional_info">Additional info:</string>
    <string name="enter">Enter…</string>
    <string name="save">Save</string>

    <string name="history_is_empty">History is empty</string>
    <string name="to_generate_statistics_left">To generate statistics left %s</string>
    <string name="dark_theme">Dark theme</string>
    <string name="language">Language</string>
    <string name="default_val">Default</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="reminder">Reminder</string>
    <string name="notification_title">Notification</string>
    <string name="notification_text">What emotion are you experiencing right now?</string>
    <string name="clear">Clear</string>
    <string name="you_sure">Are you sure you want to clear all the information?</string>
</resources>