<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_graph"
    app:startDestination="@id/tabsEmotionFragment">

    <fragment
        android:id="@+id/tabsEmotionFragment"
        android:name="com.emotions.controller.presentation.ui.home.tabs.emotion.TabEmotionFragment"
        android:label="@string/tabs_emotion"
        tools:layout="@layout/fragment_tab_emotion">
        <action
            android:id="@+id/action_tabsEmotionFragment_to_addEmotionFragment"
            app:destination="@id/addEmotionFragment" />
        <action
            android:id="@+id/action_tabsEmotionFragment_to_infoEmotionFragment"
            app:destination="@id/infoEmotionFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEmotionFragment"
        android:name="com.emotions.controller.presentation.ui.home.tabs.emotion.AddEmotionFragment"
        android:label="@string/sub_tabs_details"
        tools:layout="@layout/fragment_add_emotion">
        <argument
            android:name="emotion"
            app:argType="integer" />
        <argument
            android:name="item"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/infoEmotionFragment"
        android:name="com.emotions.controller.presentation.ui.home.tabs.emotion.InfoEmotionFragment"
        android:label="@string/sub_tabs_info"
        tools:layout="@layout/fragment_info_emotion">
        <argument
            android:name="emotion"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/tabHistoryFragment"
        android:name="com.emotions.controller.presentation.ui.home.tabs.history.TabHistoryFragment"
        android:label="@string/tabs_history"
        tools:layout="@layout/fragment_tab_history">
        <action
            android:id="@+id/action_tabHistoryFragment_to_addEmotionFragment"
            app:destination="@id/addEmotionFragment" />
    </fragment>

    <fragment
        android:id="@+id/tabStatisticsFragment"
        android:name="com.emotions.controller.presentation.ui.home.tabs.statistics.TabStatisticsFragment"
        android:label="@string/tabs_statistics"
        tools:layout="@layout/fragment_tab_statistics" />

    <fragment
        android:id="@+id/tabSettingsFragment"
        android:name="com.emotions.controller.presentation.ui.home.tabs.settings.TabSettingsFragment"
        android:label="@string/tabs_settings"
        tools:layout="@layout/fragment_tab_settings" />

</navigation>